# slurmkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
slurmkit/: __init__.py  funcall.py
slurmkit/tests/: test_funcall.py  test_slurm.py
