[project]
name = "slurmkit"
version = "0.3.0"
description = ""
readme = "README.md"
authors = [
    { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org"}
]
dependencies = [
    "pydantic>=2.0.0",
    "cloudpickle>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "mypy>=1.1.1",
    "pre-commit>=3.2.1",
    "zarr>=2.14.2",
    "numpy>=1.24.2",
]

[project.scripts]
funcall = "slurmkit.funcall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
